// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginScreen /> renders with complete email and password fields 1`] = `
<Styled(Container)
  style={
    Object {
      "alignContent": "center",
      "backgroundColor": "#67141A",
      "flex": 1,
    }
  }
>
  <LoadingModal
    loadingLabel="Logging in..."
    visible={false}
  />
  <Component
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../src/assets/images/ua_logo.png",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "flex": 0.4,
        "marginTop": "20%",
      }
    }
  />
  <Component
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Styled(Form)>
      <Styled(Item)
        floatingLabel={true}
        style={
          Object {
            "marginLeft": "5%",
            "marginRight": "5%",
          }
        }
      >
        <Styled(Label)
          style={
            Object {
              "color": "white",
            }
          }
        >
          Email
        </Styled(Label)>
        <Styled(Input)
          keyboardType="email-address"
          onChangeText={[Function]}
          style={
            Object {
              "color": "white",
            }
          }
          value="test@test.com"
        />
      </Styled(Item)>
    </Styled(Form)>
    <Styled(Form)>
      <Styled(Item)
        floatingLabel={true}
        style={
          Object {
            "marginLeft": "5%",
            "marginRight": "5%",
          }
        }
      >
        <Styled(Label)
          style={
            Object {
              "color": "white",
            }
          }
        >
          Password
        </Styled(Label)>
        <Styled(Input)
          onChangeText={[Function]}
          secureTextEntry={true}
          style={
            Object {
              "color": "white",
            }
          }
          value="password"
        />
      </Styled(Item)>
    </Styled(Form)>
    <Styled(Button)
      block={true}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "baseline",
          "backgroundColor": "white",
          "justifyContent": "center",
          "marginLeft": "5%",
          "marginRight": "5%",
          "marginTop": "5%",
        }
      }
    >
      <Styled(H1)
        style={
          Object {
            "color": "black",
            "fontSize": 20,
          }
        }
      >
        Sign In
      </Styled(H1)>
    </Styled(Button)>
  </Component>
</Styled(Container)>
`;

exports[`<LoginScreen /> renders with default props 1`] = `
<Styled(Container)
  style={
    Object {
      "alignContent": "center",
      "backgroundColor": "#67141A",
      "flex": 1,
    }
  }
>
  <LoadingModal
    loadingLabel="Logging in..."
  />
  <Component
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../src/assets/images/ua_logo.png",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "flex": 0.4,
        "marginTop": "20%",
      }
    }
  />
  <Component
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Styled(Form)>
      <Styled(Item)
        floatingLabel={true}
        style={
          Object {
            "marginLeft": "5%",
            "marginRight": "5%",
          }
        }
      >
        <Styled(Label)
          style={
            Object {
              "color": "white",
            }
          }
        >
          Email
        </Styled(Label)>
        <Styled(Input)
          keyboardType="email-address"
          onChangeText={[Function]}
          style={
            Object {
              "color": "white",
            }
          }
        />
      </Styled(Item)>
    </Styled(Form)>
    <Styled(Form)>
      <Styled(Item)
        floatingLabel={true}
        style={
          Object {
            "marginLeft": "5%",
            "marginRight": "5%",
          }
        }
      >
        <Styled(Label)
          style={
            Object {
              "color": "white",
            }
          }
        >
          Password
        </Styled(Label)>
        <Styled(Input)
          onChangeText={[Function]}
          secureTextEntry={true}
          style={
            Object {
              "color": "white",
            }
          }
        />
      </Styled(Item)>
    </Styled(Form)>
    <Styled(Button)
      block={true}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "baseline",
          "backgroundColor": "white",
          "justifyContent": "center",
          "marginLeft": "5%",
          "marginRight": "5%",
          "marginTop": "5%",
        }
      }
    >
      <Styled(H1)
        style={
          Object {
            "color": "black",
            "fontSize": 20,
          }
        }
      >
        Sign In
      </Styled(H1)>
    </Styled(Button)>
  </Component>
</Styled(Container)>
`;
